Refactor [#9] 리뷰 반영해 불변성 보장하도록 수정
stream.toList()로 수정